@@ -23,13 +23,13 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.apache.commons:commons-dbcp2:2.9.0'
-    implementation 'commons-net:commons-net:3.7.1'
-    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
+    implementation 'org.apache.commons:commons-dbcp2:2.10.0'
+    implementation 'commons-net:commons-net:3.7.2'
+    implementation 'org.apache.httpcomponents:httpclient:4.5.14'
     implementation 'jaxen:jaxen:1.1.6'
-    implementation 'org.apache.logging.log4j:log4j-core:2.23.1'
-    implementation 'com.oracle.database.jdbc:ojdbc10:19.23.0.0'
-    implementation 'org.springframework:spring-jdbc:6.1.7'
+    implementation 'org.apache.logging.log4j:log4j-core:2.24.0'
+    implementation 'com.oracle.database.jdbc:ojdbc10:19.24.0.0'
+    implementation 'org.springframework:spring-jdbc:6.1.8'
     implementation 'com.io7m.xom:xom:1.2.10'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
